// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using SGHSS_Backend.Data;

#nullable disable

namespace SGHSS_Backend.Migrations
{
    [DbContext(typeof(SGHSSDbContext))]
    [Migration("20251021235336_AddRelacaoProfissionalPaciente")]
    partial class AddRelacaoProfissionalPaciente
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.6")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Consulta", b =>
                {
                    b.Property<int>("IdConsulta")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("IdConsulta"));

                    b.Property<DateTime>("DataHoraConsulta")
                        .HasColumnType("datetime2");

                    b.Property<int>("IdPaciente")
                        .HasColumnType("int");

                    b.Property<int>("IdProfissional")
                        .HasColumnType("int");

                    b.Property<string>("Observacoes")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("StatusConsulta")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("TipoConsulta")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("IdConsulta");

                    b.HasIndex("IdPaciente");

                    b.HasIndex("IdProfissional");

                    b.ToTable("Consultas", (string)null);
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Paciente", b =>
                {
                    b.Property<int>("IdPaciente")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("IdPaciente"));

                    b.Property<string>("Convenio")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Cpf")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<DateTime>("DataNascimento")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .HasMaxLength(255)
                        .HasColumnType("varchar(255)");

                    b.Property<string>("Endereco")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("HistoricoClinico")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("IdUsuario")
                        .HasColumnType("int");

                    b.Property<string>("NomeCompleto")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Rg")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("Sexo")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Telefone")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("IdPaciente");

                    b.HasIndex("Cpf")
                        .IsUnique();

                    b.HasIndex("IdUsuario")
                        .IsUnique();

                    b.HasIndex("Rg")
                        .IsUnique()
                        .HasFilter("[Rg] IS NOT NULL AND [Rg] <> ''");

                    b.ToTable("Pacientes", (string)null);
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Profissional", b =>
                {
                    b.Property<int>("IdProfissional")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("IdProfissional"));

                    b.Property<string>("Cpf")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("CrmOuConselho")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("DisponibilidadeAgenda")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("EmailProfissional")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Especialidade")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("IdUsuario")
                        .HasColumnType("int");

                    b.Property<string>("NomeCompleto")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Rg")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("Telefone")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("IdProfissional");

                    b.HasIndex("Cpf")
                        .IsUnique()
                        .HasFilter("[Cpf] IS NOT NULL AND [Cpf] <> ''");

                    b.HasIndex("CrmOuConselho")
                        .IsUnique();

                    b.HasIndex("IdUsuario")
                        .IsUnique();

                    b.HasIndex("Rg")
                        .IsUnique()
                        .HasFilter("[Rg] IS NOT NULL AND [Rg] <> ''");

                    b.ToTable("Profissionais", (string)null);
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.RelacaoProfissionalPaciente", b =>
                {
                    b.Property<int>("IdRelacao")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("IdRelacao"));

                    b.Property<int>("IdPaciente")
                        .HasColumnType("int");

                    b.Property<int>("IdProfissional")
                        .HasColumnType("int");

                    b.Property<string>("StatusRelacao")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.HasKey("IdRelacao");

                    b.HasIndex("IdPaciente");

                    b.HasIndex("IdProfissional", "IdPaciente")
                        .IsUnique();

                    b.ToTable("RelacoesProfissionalPaciente", (string)null);
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Usuario", b =>
                {
                    b.Property<int>("IdUsuario")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("IdUsuario"));

                    b.Property<bool>("Ativo")
                        .HasColumnType("bit");

                    b.Property<DateTime>("DataCriacao")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("Perfil")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Senha")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("IdUsuario");

                    b.HasIndex("Email")
                        .IsUnique();

                    b.ToTable("Usuarios", (string)null);
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Consulta", b =>
                {
                    b.HasOne("SGHSS_Backend.Data.Entities.Paciente", "Paciente")
                        .WithMany("Consultas")
                        .HasForeignKey("IdPaciente")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("SGHSS_Backend.Data.Entities.Profissional", "Profissional")
                        .WithMany("Consultas")
                        .HasForeignKey("IdProfissional")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Paciente");

                    b.Navigation("Profissional");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Paciente", b =>
                {
                    b.HasOne("SGHSS_Backend.Data.Entities.Usuario", "Usuario")
                        .WithOne("Paciente")
                        .HasForeignKey("SGHSS_Backend.Data.Entities.Paciente", "IdUsuario")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Usuario");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Profissional", b =>
                {
                    b.HasOne("SGHSS_Backend.Data.Entities.Usuario", "Usuario")
                        .WithOne("Profissional")
                        .HasForeignKey("SGHSS_Backend.Data.Entities.Profissional", "IdUsuario")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Usuario");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.RelacaoProfissionalPaciente", b =>
                {
                    b.HasOne("SGHSS_Backend.Data.Entities.Paciente", "Paciente")
                        .WithMany("Relacoes")
                        .HasForeignKey("IdPaciente")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("SGHSS_Backend.Data.Entities.Profissional", "Profissional")
                        .WithMany("Relacoes")
                        .HasForeignKey("IdProfissional")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Paciente");

                    b.Navigation("Profissional");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Paciente", b =>
                {
                    b.Navigation("Consultas");

                    b.Navigation("Relacoes");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Profissional", b =>
                {
                    b.Navigation("Consultas");

                    b.Navigation("Relacoes");
                });

            modelBuilder.Entity("SGHSS_Backend.Data.Entities.Usuario", b =>
                {
                    b.Navigation("Paciente");

                    b.Navigation("Profissional");
                });
#pragma warning restore 612, 618
        }
    }
}
